Adjust frontend to use new method names

--- a/Kitodo/src/main/webapp/pages/BenutzerAlle.xhtml
+++ b/Kitodo/src/main/webapp/pages/BenutzerAlle.xhtml
@@ -94,10 +94,10 @@
                                                              onkeypress="return submitEnter('FilterAlle',event)"/>
                                                 <t:commandButton type="submit" id="FilterAlle" forceId="true"
                                                                  style="display:none"
-                                                                 action="#{BenutzerverwaltungForm.filterAlleStart}"/>
+                                                                 action="#{BenutzerverwaltungForm.filterAll}"/>
 
                                                 <h:commandLink
-                                                        action="#{BenutzerverwaltungForm.filterAlleStart}"
+                                                        action="#{BenutzerverwaltungForm.filterAll}"
                                                         title="#{msgs.filterAnwenden}" style="margin-left:5px">
                                                     <h:graphicImage id="id13" alt="reload"
                                                                     value="/pages/images/buttons/reload.gif"/>
