--- a/Kitodo/src/main/webapp/pages/NewProcess/Page3.xhtml
+++ b/Kitodo/src/main/webapp/pages/NewProcess/Page3.xhtml
@@ -101,7 +101,7 @@
                                                         <h:commandLink id="utid22"
                                                                        action="ProzessverwaltungBearbeiten">
                                                             <t:updateActionListener
-                                                                    property="#{ProzessverwaltungForm.myProzess}"
+                                                                    property="#{ProzessverwaltungForm.process}"
                                                                     value="#{ProzesskopieForm.prozessKopie}"/>
                                                             <t:updateActionListener value=""
                                                                                     property="#{ProzessverwaltungForm.modusBearbeiten}"/>
