--- a/Kitodo/src/main/webapp/pages/inc_AktuelleSchritte/Schritte_Liste_Action.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_AktuelleSchritte/Schritte_Liste_Action.xhtml
@@ -113,7 +113,7 @@
 
 
                             </h:panelGrid>
-                            <h:commandLink action="#{AktuelleSchritteForm.filterAlleStart}" style="margin-left:44px"
+                            <h:commandLink action="#{AktuelleSchritteForm.filterAll}" style="margin-left:44px"
                                            title="#{msgs.uebernehmen}">
                                 <h:outputText value="#{msgs.uebernehmen}"/>
                             </h:commandLink>
