--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Benutzer.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Benutzer.xhtml
@@ -32,7 +32,7 @@
                  cellspacing="1px" cellpadding="1px" headerClass="standardTable_Header"
                  rowClasses="standardTable_Row1"
                  columnClasses="standardTable_Column,standardTable_ColumnCentered"
-                 var="item" value="#{ProzessverwaltungForm.mySchritt.users}">
+                 var="item" value="#{ProzessverwaltungForm.task.users}">
         <h:column>
             <f:facet name="header">
                 <h:outputText value="#{msgs.benutzer}"/>
