--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Benutzergruppen.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt_box_Benutzergruppen.xhtml
@@ -32,7 +32,7 @@
                  headerClass="standardTable_Header" rowClasses="standardTable_Row1"
                  columnClasses="standardTable_Column,standardTable_ColumnCentered"
                  var="item"
-                 value="#{ProzessverwaltungForm.mySchritt.userGroups}">
+                 value="#{ProzessverwaltungForm.task.userGroups}">
 
         <h:column>
             <f:facet name="header">
