--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/vorlage.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/vorlage.xhtml
@@ -55,9 +55,9 @@
                                 <td>
                                     <h3>
                                         <h:outputText value="#{msgs.neueVorlageAnlegen}"
-                                                      rendered="#{ProzessverwaltungForm.myVorlage.id == null}"/>
+                                                      rendered="#{ProzessverwaltungForm.template.id == null}"/>
                                         <h:outputText value="#{msgs.vorlageDetails}"
-                                                      rendered="#{ProzessverwaltungForm.myVorlage.id != null}"/>
+                                                      rendered="#{ProzessverwaltungForm.template.id != null}"/>
                                     </h3>
 
                                     <!-- globale Warn- und Fehlermeldungen -->
