--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/werkstueck.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/werkstueck.xhtml
@@ -55,9 +55,9 @@
                                     <td>
                                         <h3>
                                             <h:outputText value="#{msgs.neueWerkstueckAnlegen}"
-                                                          rendered="#{ProzessverwaltungForm.myWerkstueck.id == null}"/>
+                                                          rendered="#{ProzessverwaltungForm.workpiece.id == null}"/>
                                             <h:outputText value="#{msgs.werkstueckDetails}"
-                                                          rendered="#{ProzessverwaltungForm.myWerkstueck.id != null}"/>
+                                                          rendered="#{ProzessverwaltungForm.workpiece.id != null}"/>
                                         </h3>
 
                                         <!-- globale Warn- und Fehlermeldungen -->
