--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste_Statistik.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/Prozesse_Liste_Statistik.xhtml
@@ -179,7 +179,7 @@
                     <h:outputText value="#{element.title}"/>
                 </h4>
                 <h:outputText value="#{element.htmlTableRenderer.rendering}" escape="false"/>
-                <h:commandLink action="#{ProzessverwaltungForm.CreateExcel}" title="#{msgs.createExcel}">
+                <h:commandLink action="#{ProzessverwaltungForm.createExcel}" title="#{msgs.createExcel}">
                     <h:graphicImage alt="create excel" value="/pages/images/buttons/excel20.png"/>
                     <h:outputText value="  #{msgs.createExcel}"/>
                     <t:updateActionListener value="#{element}" property="#{ProzessverwaltungForm.myCurrentTable}"/>
@@ -198,7 +198,7 @@
                     </ui:fragment>
                     <h:outputText value="#{element.htmlTableRenderer.rendering}" escape="false"
                                   rendered="#{element.dataTable.showableInTable}"/>
-                    <h:commandLink action="#{ProzessverwaltungForm.CreateExcel}" title="#{msgs.createExcel}"
+                    <h:commandLink action="#{ProzessverwaltungForm.createExcel}" title="#{msgs.createExcel}"
                                    rendered="#{element.dataTable.showableInTable}">
                         <h:graphicImage alt="create excel" value="/pages/images/buttons/excel20.png"/>
                         <h:outputText value="  #{msgs.createExcel}"/>
