--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/prozess_box_Vorlagen.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/prozess_box_Vorlagen.xhtml
@@ -28,7 +28,7 @@
                  cellspacing="1px" cellpadding="1px" headerClass="standardTable_Header"
                  rowClasses="standardTable_Row1,standardTable_Row2"
                  columnClasses="standardTable_ColumnCentered,standardTable_Column,standardTable_ColumnCentered,standardTable_ColumnCentered"
-                 var="item" value="#{ProzessverwaltungForm.myProzess.templates}"
+                 var="item" value="#{ProzessverwaltungForm.process.templates}"
                  rowIndexVar="index">
 
     <!-- ===================== Nr ====================== -->
@@ -66,7 +66,7 @@
                        title="#{msgs.vorlageBearbeiten}">
             <h:graphicImage value="/pages/images/buttons/goInto.gif" alt="edit"/>
             <t:updateActionListener
-                    property="#{ProzessverwaltungForm.myVorlageReload}" value="#{item}"/>
+                    property="#{ProzessverwaltungForm.templateReload}" value="#{item}"/>
         </h:commandLink>
     </h:column>
 
