--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/schritt.xhtml
@@ -26,7 +26,7 @@
     >
     <f:metadata>
         <f:viewParam name="id" value="#{ProzessverwaltungForm.taskId}" />
-        <f:viewAction action="#{ProzessverwaltungForm.loadMyTask}" />
+        <f:viewAction action="#{ProzessverwaltungForm.loadTask}" />
     </f:metadata>
     <f:view locale="#{SpracheForm.locale}">
         <ui:include src="/pages/inc/head.xhtml" />
@@ -61,9 +61,9 @@
                                     <td>
                                         <h3>
                                             <h:outputText value="#{msgs.schrittHinzufuegen}"
-                                                          rendered="#{ProzessverwaltungForm.mySchritt.id == null}"/>
+                                                          rendered="#{ProzessverwaltungForm.task.id == null}"/>
                                             <h:outputText value="#{msgs.schrittDetails}"
-                                                          rendered="#{ProzessverwaltungForm.mySchritt.id != null}"/>
+                                                          rendered="#{ProzessverwaltungForm.task.id != null}"/>
                                         </h3>
 
                                         <!-- globale Warn- und Fehlermeldungen -->
