--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/vorlage_box_Details.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/vorlage_box_Details.xhtml
@@ -25,7 +25,7 @@
                     <h:outputText value="#{msgs.vorlage}"/>
                 </td>
                 <td class="main_statistikboxen_row1" align="right">
-                    <h:commandLink action="#{ProzessverwaltungForm.Reload}">
+                    <h:commandLink action="#{ProzessverwaltungForm.reload}">
                         <h:graphicImage value="/pages/images/reload.gif" alt="reload"/>
                     </h:commandLink>
                 </td>
@@ -40,7 +40,7 @@
                                 <h:outputText value="#{msgs.herkunft}:"/>
                             </td>
                             <td>
-                                <h:outputText value="#{ProzessverwaltungForm.myVorlage.origin}"/>
+                                <h:outputText value="#{ProzessverwaltungForm.template.origin}"/>
                             </td>
                             <td rowspan="2" align="right">
                                 <h:commandLink title="#{msgs.bearbeiten}"
@@ -86,7 +86,7 @@
                             <h:outputLabel for="titel2" value="#{msgs.herkunft}"/>
                             <h:panelGroup>
                                 <h:inputText id="titel2" style="width: 300px;margin-right:15px"
-                                             value="#{ProzessverwaltungForm.myVorlage.origin}"
+                                             value="#{ProzessverwaltungForm.template.origin}"
                                              required="true"/>
                                 <t:message for="titel2" style="color: red"
                                            replaceIdWithLabel="true"/>
