--- a/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/vorlage_box_Eigenschaften.xhtml
+++ b/Kitodo/src/main/webapp/pages/inc_Prozessverwaltung/vorlage_box_Eigenschaften.xhtml
@@ -33,7 +33,7 @@
                  width="100%" cellspacing="1px" cellpadding="1px"
                  headerClass="standardTable_Header" rowClasses="standardTable_Row1"
                  columnClasses="standardTable_Column,standardTable_Column,standardTable_ColumnCentered"
-                 var="item" value="#{ProzessverwaltungForm.myVorlage.properties}"
+                 var="item" value="#{ProzessverwaltungForm.template.properties}"
                  rendered="#{ProzessverwaltungForm.modusBearbeiten!='vorlageeigenschaft'}">
 
         <h:column>
@@ -59,7 +59,7 @@
                            title="#{msgs.bearbeiten}">
                 <h:graphicImage value="/pages/images/buttons/edit.gif" alt="edit"/>
                 <t:updateActionListener
-                        property="#{ProzessverwaltungForm.myVorlageEigenschaft}"
+                        property="#{ProzessverwaltungForm.templateProperty}"
                         value="#{item}"/>
                 <t:updateActionListener
                         property="#{ProzessverwaltungForm.modusBearbeiten}"
@@ -108,7 +108,7 @@
                         <h:panelGroup>
                             <h:inputText id="eigenschafttitel"
                                          style="width: 300px;margin-right:15px"
-                                         value="#{ProzessverwaltungForm.myVorlageEigenschaft.title}"
+                                         value="#{ProzessverwaltungForm.templateProperty.title}"
                                          required="true"/>
                             <t:message for="eigenschafttitel" style="color: red"
                                        detailFormat="#{msgs.keinTitelAngegeben}"/>
@@ -118,7 +118,7 @@
                         <h:panelGroup>
                             <h:inputText id="eigenschaftwert"
                                          style="width: 300px;margin-right:15px"
-                                         value="#{ProzessverwaltungForm.myVorlageEigenschaft.value}"/>
+                                         value="#{ProzessverwaltungForm.templateProperty.value}"/>
                         </h:panelGroup>
                     </h:panelGrid>
 
@@ -137,7 +137,7 @@
                     <h:commandButton value="#{msgs.loeschen}"
                                      action="#{ProzessverwaltungForm.VorlageEigenschaftLoeschen}"
                                      onclick="return confirm('#{msgs.sollDieserEintragWirklichGeloeschtWerden}?')"
-                                     rendered="#{ProzessverwaltungForm.myVorlageEigenschaft.id != null}">
+                                     rendered="#{ProzessverwaltungForm.templateProperty.id != null}">
                         <t:updateActionListener
                                 property="#{ProzessverwaltungForm.modusBearbeiten}" value=""/>
                     </h:commandButton>
